fixing up timeline on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,7 @@ footer {
     font-size: 16px;
     line-height: 17px;
     width: 100%;
-    font-weight: 500;
-
+    font-weight: 300;
 }
 
 footer a:hover {
